Uses new toList method